Mowzie's Mobs Optional Dependency

--- a/src/main/resources/assets/mysticstaffs/lang/en_us.lang
+++ b/src/main/resources/assets/mysticstaffs/lang/en_us.lang
@@ -20,58 +20,6 @@ item.glow_staff.name=Glow Staff
 mysticstaffs.general.common=Common
 mysticstaffs.general.common.tooltip=Common configuration for Mystic Staffs
 
-mysticstaffs.general.common.pathstaff=Path Staff
-mysticstaffs.general.common.pathstaff.tooltip=Configuration for the Path Staff
-mysticstaffs.general.common.pathstaff.durability=Durability
-mysticstaffs.general.common.pathstaff.durability.tooltip=Max durability of the Path Staff, 0 means infinite durability
-mysticstaffs.general.common.pathstaff.cooldown=Cooldown
-mysticstaffs.general.common.pathstaff.cooldown.tooltip=Cooldown between uses of the Path Staff in ticks
-mysticstaffs.general.common.pathstaff.featherconsumption=Feather Consumption
-mysticstaffs.general.common.pathstaff.featherconsumption.tooltip=Feather consumption per use of the Path Staff
-mysticstaffs.general.common.pathstaff.lifetime=Lifetime
-mysticstaffs.general.common.pathstaff.lifetime.tooltip=Lifetime of the path in ticks
-mysticstaffs.general.common.pathstaff.length=Length
-mysticstaffs.general.common.pathstaff.length.tooltip=Length of the path in blocks
-
-mysticstaffs.general.common.iceballstaff=Iceball Staff
-mysticstaffs.general.common.iceballstaff.tooltip=Configuration for the Iceball Staff
-mysticstaffs.general.common.iceballstaff.durability=Durability
-mysticstaffs.general.common.iceballstaff.durability.tooltip=Max durability of the Iceball Staff, 0 means infinite durability
-mysticstaffs.general.common.iceballstaff.cooldown=Cooldown
-mysticstaffs.general.common.iceballstaff.cooldown.tooltip=Cooldown between uses of the Iceball Staff in ticks
-mysticstaffs.general.common.iceballstaff.featherconsumption=Feather Consumption
-mysticstaffs.general.common.iceballstaff.featherconsumption.tooltip=Feather consumption per use of the Iceball Staff
-mysticstaffs.general.common.iceballstaff.velocity=Ice Ball Velocity
-mysticstaffs.general.common.iceballstaff.velocity.tooltip=Velocity of the Ice Ball shoot from the Ice Ball Staff
-
-mysticstaffs.general.common.sunstrikestaff=Sunstrike Staff
-mysticstaffs.general.common.sunstrikestaff.tooltip=Configuration for the Sunstrike Staff
-mysticstaffs.general.common.sunstrikestaff.durability=Durability
-mysticstaffs.general.common.sunstrikestaff.durability.tooltip=Max durability of the Sunstrike Staff, 0 means infinite
-mysticstaffs.general.common.sunstrikestaff.cooldown=Cooldown
-mysticstaffs.general.common.sunstrikestaff.cooldown.tooltip=Cooldown between uses of the Sunstrike Staff in ticks
-mysticstaffs.general.common.sunstrikestaff.featherconsumption=Feather Consumption
-mysticstaffs.general.common.sunstrikestaff.featherconsumption.tooltip=Feather consumption per use of the Sunstrike Staff
-mysticstaffs.general.common.sunstrikestaff.amount=Amount
-mysticstaffs.general.common.sunstrikestaff.amount.tooltip=Amount of strikes
-mysticstaffs.general.common.sunstrikestaff.radius=Radius
-mysticstaffs.general.common.sunstrikestaff.radius.tooltip=Radius around the target (the block you where looking at when using the Sunstrike Staff) where to send strikes
-mysticstaffs.general.common.sunstrikestaff.delay=Delay
-mysticstaffs.general.common.sunstrikestaff.delay.tooltip=Max delay between each strikes
-mysticstaffs.general.common.sunstrikestaff.reachmultiplier=Reach Multiplier
-mysticstaffs.general.common.sunstrikestaff.reachmultiplier.tooltip=Reach multiplier of the Sunstrike Staff
-
-mysticstaffs.general.common.solarbeamstaff=Solar Beam Staff
-mysticstaffs.general.common.solarbeamstaff.tooltip=Configuration for the Solar Beam Staff
-mysticstaffs.general.common.solarbeamstaff.durability=Durability
-mysticstaffs.general.common.solarbeamstaff.durability.tooltip=Max durability of the Solar Beam Staff, 0 means infinite
-mysticstaffs.general.common.solarbeamstaff.cooldown=Cooldown
-mysticstaffs.general.common.solarbeamstaff.cooldown.tooltip=Cooldown between uses of the Solar Beam Staff in ticks
-mysticstaffs.general.common.solarbeamstaff.featherconsumption=Feather Consumption
-mysticstaffs.general.common.solarbeamstaff.featherconsumption.tooltip=Feather consumption per use of the Solar Beam Staff
-mysticstaffs.general.common.solarbeamstaff.slowness=Slowness
-mysticstaffs.general.common.solarbeamstaff.slowness.tooltip=The amount of slowness to give to the player when using the Solar Beam Staff
-
 mysticstaffs.general.common.invisibilitystaff=Invisibility Staff
 mysticstaffs.general.common.invisibilitystaff.tooltip=Configuration for the Invisibility Staff
 mysticstaffs.general.common.invisibilitystaff.durability=Durability
@@ -147,4 +95,59 @@ mysticstaffs.general.common.glowstaff.duration=Duration
 mysticstaffs.general.common.glowstaff.duration.tooltip=Duration of the Glow Staff effect in ticks
 mysticstaffs.general.common.glowstaff.range=Range
 mysticstaffs.general.common.glowstaff.range.tooltip=Range of the Glow Staff
+
+mysticstaffs.general.common.mowziesstaffs=Mowzie's Staffs
+mysticstaffs.general.common.mowziesstaffs.tooltip=Configuration for Mowzie's Staffs, theses staffs are only available when Mowzie's Mobs is installed
+
+mysticstaffs.general.common.mowziesstaffs.pathstaff=Path Staff
+mysticstaffs.general.common.mowziesstaffs.pathstaff.tooltip=Configuration for the Path Staff
+mysticstaffs.general.common.mowziesstaffs.pathstaff.durability=Durability
+mysticstaffs.general.common.mowziesstaffs.pathstaff.durability.tooltip=Max durability of the Path Staff, 0 means infinite durability
+mysticstaffs.general.common.mowziesstaffs.pathstaff.cooldown=Cooldown
+mysticstaffs.general.common.mowziesstaffs.pathstaff.cooldown.tooltip=Cooldown between uses of the Path Staff in ticks
+mysticstaffs.general.common.mowziesstaffs.pathstaff.featherconsumption=Feather Consumption
+mysticstaffs.general.common.mowziesstaffs.pathstaff.featherconsumption.tooltip=Feather consumption per use of the Path Staff
+mysticstaffs.general.common.mowziesstaffs.pathstaff.lifetime=Lifetime
+mysticstaffs.general.common.mowziesstaffs.pathstaff.lifetime.tooltip=Lifetime of the path in ticks
+mysticstaffs.general.common.mowziesstaffs.pathstaff.length=Length
+mysticstaffs.general.common.mowziesstaffs.pathstaff.length.tooltip=Length of the path in blocks
+
+mysticstaffs.general.common.mowziesstaffs.iceballstaff=Iceball Staff
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.tooltip=Configuration for the Iceball Staff
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.durability=Durability
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.durability.tooltip=Max durability of the Iceball Staff, 0 means infinite durability
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.cooldown=Cooldown
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.cooldown.tooltip=Cooldown between uses of the Iceball Staff in ticks
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.featherconsumption=Feather Consumption
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.featherconsumption.tooltip=Feather consumption per use of the Iceball Staff
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.velocity=Ice Ball Velocity
+mysticstaffs.general.common.mowziesstaffs.iceballstaff.velocity.tooltip=Velocity of the Ice Ball shoot from the Ice Ball Staff
+
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff=Sunstrike Staff
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.tooltip=Configuration for the Sunstrike Staff
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.durability=Durability
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.durability.tooltip=Max durability of the Sunstrike Staff, 0 means infinite
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.cooldown=Cooldown
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.cooldown.tooltip=Cooldown between uses of the Sunstrike Staff in ticks
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.featherconsumption=Feather Consumption
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.featherconsumption.tooltip=Feather consumption per use of the Sunstrike Staff
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.amount=Amount
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.amount.tooltip=Amount of strikes
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.radius=Radius
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.radius.tooltip=Radius around the target (the block you where looking at when using the Sunstrike Staff) where to send strikes
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.delay=Delay
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.delay.tooltip=Max delay between each strikes
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.reachmultiplier=Reach Multiplier
+mysticstaffs.general.common.mowziesstaffs.sunstrikestaff.reachmultiplier.tooltip=Reach multiplier of the Sunstrike Staff
+
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff=Solar Beam Staff
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.tooltip=Configuration for the Solar Beam Staff
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.durability=Durability
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.durability.tooltip=Max durability of the Solar Beam Staff, 0 means infinite
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.cooldown=Cooldown
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.cooldown.tooltip=Cooldown between uses of the Solar Beam Staff in ticks
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.featherconsumption=Feather Consumption
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.featherconsumption.tooltip=Feather consumption per use of the Solar Beam Staff
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.slowness=Slowness
+mysticstaffs.general.common.mowziesstaffs.solarbeamstaff.slowness.tooltip=The amount of slowness to give to the player when using the Solar Beam Staff
 
